docs: update README to reflect full Phase 2 state